--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
+    "moment-timezone": "^0.5.45",
     "npm": "^10.8.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
