--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-merchant",
+  "name": "unique-address",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "ethers": "^6.12.0",
     "install": "^0.13.0",
     "moment-timezone": "^0.5.45",
     "npm": "^10.8.1",
